--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
         <h1>Games Shop</h1>
         <nav>
           <ul>
-            <li><a href="#">Sobre a loja</a></li>
-            <li><a href="#">Contato</a></li>
+            <li><a href="about">Sobre a loja</a></li>
+            <li><a href="contato">Contato</a></li>
           </ul>
         </nav>
       </div>
     </header>
 
-    <section>
+    <section id="about">
       <div class="container">
         <img class="fachada" src="images/loja.jpg" alt="Fachada de lojas" />
         <div>
@@ -52,5 +52,60 @@
         </div>
       </div>
     </section>
+
+    <section id="contato">
+      <div class="container">
+        <h2>Contato</h2>
+        <div class="contato-metodos">
+          <div>
+            <h3>Fale conosco</h3>
+            <form action="#">
+              <input type="text" placeholder="Digite seu nome" required />
+              <input type="email" placeholder="Digite seu e-mail" required />
+              <input type="tel" placeholder="Digite seu telefone (opcional)" />
+              <textarea
+                name="text"
+                id="text"
+                cols="30"
+                rows="10"
+                placeholder="Digite seu texto"
+                required
+              ></textarea>
+              <button type="submit">Enviar</button>
+            </form>
+          </div>
+          <div>
+            <h3>Nos acompanhe</h3>
+            <ul class="social-links">
+              <li>
+                <a href="#">
+                  <img src="images/instagram.png" alt="Logo do Instagram" />
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="images/facebook.png" alt="Logo do Facebook" />
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="images/youtube.png" alt="Logo do Youtube" />
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div>
+            <h3>Endereço</h3>
+            <p>Rua Ebac nº 24, vila Mariana, São Paulo - SP</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer>
+      <div class="container">
+        <p>&copy; Games Shop - Todos os direitos reservados - 2024</p>
+      </div>
+    </footer>
   </body>
 </html>
